fix: Hero content alignment in Internet Explorer
Use top / bottom padding instead of min-height to workaround a flexbox
bug where IE ignores vertical alignment if the flexbox doesn't have an
explicit height property.

This produces a similar effect, but has the tradeoff that the hero
component no longer has a minimum size and may be shorter than
originally intended on some displays.

--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -6,8 +6,7 @@ $skew-origin: bottom left;
   flex-direction: column;
   justify-content: center;
 
-  min-height: 50vh;
-  padding: 0 1rem;
+  padding: 6vh 1rem;
 
   background-color: $primary-500;
   color: white;
